--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "crud_basico",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crud_basico": "file:",
     "ejs": "^3.1.10",
     "ejs-layouts": "^0.0.1",
     "express": "^4.21.2",
-    "expresss": "^0.0.0",
     "mysql2": "^3.14.0",
-    "sequelize": "^6.37.7"
+    "pg": "^8.15.6",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
